tests/integration/features/sdoc/document_grammar/_grammar_from_file/_validations/02_grammar_file_must_not_contain_dots/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir %T | filecheck %s --dump-input=fail
CHECK: error: [GRAMMAR]: IMPORT_FROM_FILE must not contain any '..', '/', '\' characters: ../grammar.sgra.
